# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# https://peps.python.org/pep-0621/
[project]
name = "lannerpsp"
description = "Python API for Lanner PSP"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE"}
keywords = [
    "lanner",
    "psp",
]
authors = [
    {name = "UFO Chen"},
    {email = "ufo_chen@lannerinc.com"},
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "sphinx==5.3.0",
    "sphinx-rtd-theme",
    "toml",
]
dev = [
    "build",
    "setuptools",
    "twine",
]
portio = [
    "portio == 0.5",
]
all = [
    "portio == 0.5",
]

[project.urls]
homepage = "https://github.com/lanneriotsw/psp-api-python"
documentation = "https://psp-api-python.readthedocs.io/"
repository = "https://github.com/lanneriotsw/psp-api-python"
changelog = "https://psp-api-python.readthedocs.io/en/stable/changelog.html"

[tool.setuptools]
packages = ["lannerpsp"]
platforms = ["Linux"]

[tool.setuptools.dynamic]
version = {attr = "lannerpsp.__version__"}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
