[metadata]
name = lannerpsp
version = attr: lannerpsp.__version__
url = https://github.com/jrchen982/lannerpsp
description = Python API for Lanner-PSP
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = lanner, psp
platforms = linux
author = UFO Chen
author_email = ufo_chen@lannerinc.com
maintainer = UFO Chen
maintainer_email = jrchen982@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/jrchen982/lannerpsp-python

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
include = lannerpsp
exclude =
    deprecated_utils
    logs
    tests
