[metadata]
name = lannerpsp
version = attr: lannerpsp.__version__
url = https://github.com/lanneriotsw/psp-api-python
description = Python API for Lanner PSP
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst; charset=UTF-8
keywords = lanner, psp
platforms = Linux
author = UFO Chen
author_email = ufo_chen@lannerinc.com
maintainer = UFO Chen
maintainer_email = jrchen982@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://psp-api-python.readthedocs.io/
    Source = https://github.com/lanneriotsw/psp-api-python

[options]
packages = find:
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
include = lannerpsp
exclude =
    logs
    tests
